Documentado en la memoria el código común a 2D y 3D (#56)

--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -148,6 +148,9 @@
 \chapter{Documentación del código JavaScript}
 \label{appendix:javascript}
 
+\import{tex/apendices/}{javascript-doc.tex}
+
+
 \chapter{Another Appendix}
 
 \end{document}
